detail on progress

--- a/mobile/android/app/src/main/AndroidManifest.xml
+++ b/mobile/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.ninofachrurozy.mobile">
    <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="mobile"
+        android:label="shoestore"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
